# PolicyFlow

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  policyflow.example.yaml  policyflow.yaml  pyproject.toml  requirements.txt
examples/: policyflow-dev.yaml  policyflow-hybrid.yaml  policyflow-zh.yaml
policyflow/: __init__.py  __main__.py  anthropic_adapter.py  cascade.py  classifier.py  cli.py  config.py  cost.py  dashboard.py  dashboard_tui.py  db.py  main.py  model_profiles.py  models.py  modifiers.py  optimizer.py  policy.py  proxy.py  router.py
scripts/: launcher.bat  seed_data.py
tests/: test_extract_prompt.py  test_prefix_stability.py
