[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "policyflow"
version = "0.5.0"
description = "OpenAI 兼容策略路由代理 — 多供应商直连，什么请求用什么模型"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
    "numpy>=2.2",
    "rich>=13.0",
    "pyfiglet>=1.0",
    "textual>=0.80",
]

[project.scripts]
policyflow = "policyflow.cli:main"

[tool.setuptools.packages.find]
include = ["policyflow*"]
